Add example of figure spanning columns

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -147,6 +147,12 @@
 		\caption{Example figure. Notice that the caption goes below.}
 	\end{figure}
 
+	\begin{figure*}[t]
+		\centering
+		\includegraphics[width=0.8\linewidth, height=.2\textheight]{example-image}
+		\caption{Example figure spanning the two columns.}
+	\end{figure*}
+
 \section{Revision}
 		We provide, in \verb|melba.sty| a helpful command to color modifications after a revision: \verb|\revision{}|. It is automatically de-activated for papers compiled with the \verb|accepted|, \verb|arxiv| or \verb|specialissue| options.
 
