Improve instructions for class options

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -2,6 +2,7 @@
 % melba class has several options:
 % - 'arxiv' in arXiv pre-print in submission (disable line numbers)
 % - 'accepted' for MELBA _accepted_ papers **only**;
+%                  to be used in conjunction with 'accepted'
 % - 'specialissue' for MELBA accepted papers that are part of a special issue.
 %                  to be used in conjunction with 'accepted'
 
