--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -23,7 +23,7 @@
 % Header and footer (will be filled at publication)
 \melbaid{YYYY:NNN}  % This is provided upon by the publishing editor
 \doi{https://doi.org/10.59275/j.melba.2024-AAAA}
-\melbaauthors{Dalca and Sabuncu}  % Note: this one is also used to set the pdf 'authors' metadata
+\melbaauthors{Name1 and Name2}  % Note: this one is also used to set the pdf 'authors' metadata
 \volume{2}
 \firstpageno{1337}  % Communicated by the publishing editor
 \melbayear{YYYY}  % The publication year
@@ -38,7 +38,7 @@
 
 
 % Short headings should be {running head} and {authors last names}
-\ShortHeadings{Autoencoder for Shapes of Brain Structures}{Dalca and Sabuncu}
+\ShortHeadings{MELBA Journal Sample Article}{Name1 and Name2}
 
 
 % Title
@@ -51,13 +51,13 @@
 
 % Notice that spacs left out (between name and orcid and affiliations will be displayed)
 \author{
-	\firstname Adrian V. \surname Dalca\aff{1,3},
-	\name Mert R. Sabuncu\aff{2,3}\orcid{0000-0002-7068-719X}
+	\firstname Firstname1 \surname Name1\aff{1,3},
+	\name Firstname2 Name2\aff{2,3}\orcid{0000-1111-2222-3333}
 }
 % Authors are free to use either a new line (\\) or a simple comma (,) between affiliations.
 \affiliations{
-	\num 1 \addr EECS, Massachusetts Institute of Technology, Cambridge, MA, USA \\
-	\num 2 \addr School of Electrical and Computer Engineering, Cornell University, Ithaca, NY, USA \\
+	\num 1 \addr Melba journal, The Internet, CERN, CH \\
+	\num 2 \addr Melba journal, The Internet, CERN, CH \\
 	\num 3 \addr Melba journal, The Internet, CERN, CH
 }
 
