Recompile sample files

--- a/latex/melba.cls
+++ b/latex/melba.cls
@@ -33,6 +33,7 @@
 \ProcessOptions\relax
 
 \if@accepted
+  \PackageError{melba}{This package is still in development and should not be used for accepted papers yet.}{}{}
 \else
   \if@arxiv
   \else % not accepted nor arxiv
