Revert "Remove/comment out accepted and specialissue options explanations"
This reverts commit 4d42c01ba4a98158e145bac50f5cadaebe9b65a6.

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -1,7 +1,10 @@
 \documentclass{melba}
 % melba class has several options:
 % - 'arxiv' in arXiv pre-print in submission (disable line numbers)
-% Other options are disabled at the moment as the template is not meant for accepted/published papers yet
+% - 'accepted' for MELBA _accepted_ papers **only**;
+%                  to be used in conjunction with 'accepted'
+% - 'specialissue' for MELBA accepted papers that are part of a special issue.
+%                  to be used in conjunction with 'accepted'
 
 \usepackage{mwe} % to get dummy images, only for the example
 % Can be removed for actual manuscripts
