Fix Crossmark link, rework \doi, \datesubmitted, \dateaccepted

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -22,13 +22,13 @@
 
 % Header and footer (will be filled at publication)
 \melbaid{YYYY:NNN}  % This is provided upon by the publishing editor
-\doi{https://doi.org/10.59275/j.melba.2024-AAAA}
+\doi{10.59275/j.melba.2024-AAAA}
 \melbaauthors{Name1 and Name2}  % Note: this one is also used to set the pdf 'authors' metadata
 \volume{2}
 \firstpageno{1337}  % Communicated by the publishing editor
 \melbayear{YYYY}  % The publication year
-\datesubmitted{m1/yyyy}  % Date submitted to MELBA: mm/yyyy
-\datepublished{m2/yyyy}  % Today's date: mm/yyyy
+\datesubmitted{yyyy-m1-d1}  % Date submitted to MELBA: mm/yyyy
+\datepublished{yyyy-m2-d2}  % Today's date: mm/yyyy
 
 % The following is optionnal, only if you are publishing in a special issue
 % The information is available on the README.md of this repository
