--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -24,6 +24,7 @@
 \melbaid{YYYY:NNN}  % This is provided upon by the publishing editor
 \doi{10.59275/j.melba.2024-AAAA}
 \melbaauthors{Name1 and Name2}  % Note: this one is also used to set the pdf 'authors' metadata
+\email{author@institute.tld}
 \volume{2}
 \firstpageno{1337}  % Communicated by the publishing editor
 \melbayear{YYYY}  % The publication year
